# 3-package-arctic_fox

./: LICENSE  README.md  pipfile  pyproject.toml
.github/workflows/: python-package.yml
examples/: example_program.py
src/arcticfoxmovies/: __main__.py  movies.py
src/placeholderproject/: movies.py  wisdom.py
tests/: test_movies.py
