[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arctic-fox-movies"
description = "A lighthearted Python package for exploring and discovering movies from the IMDB Top 250 list with fun utilities for movie selection and analysis."
version = "0.1.1"
authors = [
  { name="Sanjay Chunduru", email="sc9635@nyu.edu" },
  { name="ZhiHui Chen", email="zc3716@nyu.edu" }, 
  { name="Rohit Dayanand", email="rohitdayanand8@gmail.com"}
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["python", "package", "build", "tutorial"]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas>=1.3.0",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
"Homepage" = "https://github.com/swe-students-spring2026/3-package-arctic_fox"
"Repository" = "https://github.com/swe-students-spring2026/3-package-arctic_fox"
"Bug Tracker" = "https://github.com/swe-students-spring2026/3-package-arctic_fox/issues"

[project.scripts]
arcticfoxmovies = "arcticfoxmovies.__main__:main"